# hydro-ide

./: .eslintrc.js  .gitignore  .vscodeignore  .vsixignore  ARCHITECTURE.md  CARGO_VIZ_IMPROVEMENTS.md  CHANGELOG.md  COLORIZER-TESTS.md  GRAPH-COMMUNICATION.md  ICON-README.md  INSTALL.md  LOCATION-COLORIZER-OPTIMIZATION.md  QUICKSTART.md  README.md  REFACTORING_PLAN.md  REFACTOR_SUMMARY.md  RELEASE-CHECKLIST.md  TESTING-SUMMARY.md  TESTING.md  VSIX-TESTING.md  commit-message-short.md  commit-message.md  demo-parameter-generation.ts  diff.out  package-lock.json  package.json  test-tick-scoping.md  tsconfig.json  tsconfig.webview.json  vitest.config.ts  webpack.config.js
docs/: CONTRIBUTING.md  PACKAGING.md  README.md
scripts/: updateOperators.js  verify-vsix.sh
src/: README.md  cargoOrchestrator.ts  config.ts  errorHandler.ts  extension.ts  graphValidator.ts  hydroIDE.ts  index.ts  locationAnalyzer.backup.ts  locationAnalyzer.ts  locationColorizer.ts  locationColorizerConfig.ts  logger.ts  progressReporter.ts  rustParser.ts  scopeAnalyzer.ts  webviewManager.ts
src/analysis/: README.md  SCOPE_ANALYZER.md  cacheManager.ts  edgeAnalyzer.ts  functionFinder.ts  graphBuilder.ts  graphExtractor.ts  hierarchyBuilder.ts  hydroOperators.json  hydroscopeConfig.ts  index.ts  utils.ts  (+9 more)
syntaxes/: hydro-rust.tmLanguage.json
test-fixtures/sample-hydro-project/: Cargo.toml  README.md
test-fixtures/sample-hydro-project/src/: complex_flows.rs  lib.rs  map_reduce.rs  multi_process.rs  paxos.rs  simple_cluster.rs  simple_flows.rs  simple_rust.rs
webview/: index.tsx  styles.css
(+40 files in other folders)
